vzdialeny pristup -- projekt

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,3 +1,8 @@
-projekt.html: projekt.md
-	pandoc -s projekt.md > projekt.html
+all: projekt1.html projekt2.html
+
+projekt1.html: projekt1.md
+	pandoc -s projekt1.md > projekt1.html
+
+projekt2.html: projekt2.md
+	pandoc -s projekt2.md > projekt2.html
 
