--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.11"
 PyYAML = "^6.0"
 Jinja2 = "^3.1.2"
 
+[tool.poetry.scripts]
+yadata = 'yadata.main:run'
+
 
 [build-system]
 requires = ["poetry-core"]
