--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 PyYAML = "^6.0"
 Jinja2 = "^3.1.4"
 pybtex = "^0.24.0"
+setuptools = "^75.8.2"
 
 [tool.poetry.scripts]
 yadata = 'yadata.main:run'
