--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ PyYAML = "^6.0"
 Jinja2 = "^3.1.4"
 pybtex = "^0.24.0"
 setuptools = "^75.8.2"
+typeguard = "^4.4.4"
 
 [tool.poetry.scripts]
 yadata = 'yadata.main:run'
